Implement JWT sliding window refresh with in-memory cache
Add TokenCacheService with ConcurrentHashMap for 4-hour token caching. Update JwtAuthFilter to validate tokens against cache and auto-refresh. Add X-New-Token header for seamless frontend token updates. Implement logout endpoint to invalidate tokens. Single active session per user. Automatic cleanup of expired tokens every 30 minutes. Remove deprecated refresh token logic.

Also includes: Veduka rebranding, Google OAuth2 SSO, location-based search with maps, role-based access control.

Co-authored-by: Cursor <cursoragent@cursor.com>